--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hola Natalia! Como estas?\r Es esta preentrega decidi darle un pequeño cambio de estilo a mi sitio. Tome la decision de eliminar la seccion tienda, me parecia innecesaria para mi proyecto, todas sus funciones pueden operarse desde el index.\r Opte por no usar boton hamburguesa ya que quise intentar una opcion mas minimalista para el nav.\r Aun no encuentro una manera de que la seccion alimentos quede estetica y funcional.\r Me centre mas en el diseño en desktop, ya que pienso que es algo que no mucha gente haria desde un celular, el sitio esta orientado a vender a pequeños locales o emprendimientos.",
   "main": "index.js",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "anymatch": "^3.1.3",
     "binary-extensions": "^2.2.0",
     "braces": "^3.0.2",
@@ -25,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass",
-		"sass:watch": "sass --watch scss/_main.scss  css/main.css"
+    "sass:watch": "sass --watch scss/_main.scss  css/main.css"
   },
   "author": "",
   "license": "ISC"
